--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "index.html"
   ],
   "dependencies": {
-    "jquery": "3"
+    "jquery": "^3.2.1"
   },
   "description": "jQuery Validaty - A Validation Plugin",
   "devDependencies": {
-    "karma-chrome-launcher": "0.1",
-    "karma-firefox-launcher": "0.1",
-    "karma-ie-launcher": "0.1",
-    "karma-jasmine": "0.2",
-    "karma-opera-launcher": "0.1",
-    "karma-phantomjs-launcher": "0.1",
-    "karma-safari-launcher": "0.1",
-    "karma": "0.12"
+    "jasmine-core": "^2.6.1",
+    "jasmine-jquery": "^2.1.1",
+    "jquery-validation": "^1.16.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-fixture": "^0.2.6",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-opera-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-safari-launcher": "^1.0.0"
   },
   "directories": {
     "lib": "lib",
@@ -48,7 +53,7 @@
     "url": "https://github.com/wbotelhos/validaty"
   },
   "scripts": {
-    "test": "node_modules/karma/bin/karma start spec/karma.conf.js"
+    "test": "node_modules/karma/bin/karma start karma.conf.js"
   },
   "version": "0.5.1"
 }
