--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-language: node_js
-node_js: 7.10
+install:
+  - npm ci
 
-before_script:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+language: node_js
+node_js: 12
+
+script:
+  - npm t
+
+services:
+ - xvfb
