--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "directories": {
     "lib": "lib",
-    "test": "spec"
+    "test": "__tests__"
   },
   "homepage": "https://github.com/wbotelhos/validaty",
   "keywords": [
